--- a/react-rest-countries/src/components/Countries/Countries.css
+++ b/react-rest-countries/src/components/Countries/Countries.css
@@ -14,3 +14,18 @@ h2{
     padding: 20px;
     border: 0;
 }
+.info{
+    width: 80%;
+    margin: auto;
+    text-align: justify;
+}
+button{
+    background-color: green;
+    padding: 10px 20px;
+    margin: 10px;
+    border: 0;
+    border-radius: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    color: #fff;
+}
