--- a/react-rest-countries/src/components/Country/Country.css
+++ b/react-rest-countries/src/components/Country/Country.css
@@ -1,7 +1,18 @@
 .country{
     background-color: #05080929;
     border-radius: 10px;
-    margin: 20px;
-    padding: 20px;
+    margin: 20px ;
+    padding: 20px ;
     border: 0;
+    text-align: center;
+}
+.country p{
+    text-align: center;
+    margin: 10px 0;
+}
+.country img{
+    height: 150px;
+    display: block;
+    margin: auto;
+    border-radius: 20px;
 }
