--- a/react-vision/src/components/Article/Article.css
+++ b/react-vision/src/components/Article/Article.css
@@ -5,7 +5,7 @@
 
 
 .blog{
-    background-color: rgb(240, 232, 232);
+    background-color: #eeede6;
     padding: 20px;
     margin: 20px;
     border-radius: 10px;
