--- a/react-vision/src/components/Article/Article.css
+++ b/react-vision/src/components/Article/Article.css
@@ -14,7 +14,7 @@
 article p {
     text-align: justify;
 }
-.btn-style {    
+article .btn-style {    
     cursor: pointer;
     background-color: var(--btn-bg);
     border-color: none ;
