--- a/fakestore/src/Components/AllProducts/Product/Product.css
+++ b/fakestore/src/Components/AllProducts/Product/Product.css
@@ -1,19 +1,4 @@
 
-.single-product{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.bg{
     background-color: #f1f3ecfc;
-    padding: 10px;
-    margin: 10px;
-    height: 400px;
-    padding: 20px;
-    border-radius: 20px;
-}
-.single-product img{
-    align-items: center;
-    width: 200px;
-    height: 220px;
-    margin: 10px 0;
-    border-radius: 20px;
 }
